--- a/Kettlebel/web/kettlebell.css
+++ b/Kettlebel/web/kettlebell.css
@@ -1,5 +1,9 @@
+@font-face {
+    font-family: 'Poppins';
+    src: url(fonts/Poppins-Black.ttf);
+}
 body{
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Poppins';
 }
 
 h1,h2,h3,h4,h5,h6{
