--- a/Kettlebel/web/kettlebell.css
+++ b/Kettlebel/web/kettlebell.css
@@ -15,6 +15,18 @@ h1,h2,h3,h4,h5,h6{
 }
 
 .navbar-custom{
-    padding-top: 20px;
+    padding-top: 1em;
 }
-
+.nav-cus{
+    text-transform: uppercase;
+    font-size: 2.5em;
+    margin-right: 1rem;
+    margin-left: 1rem;
+}
+.szabadedzo{
+    margin-top: 3em;
+}
+.navlion{
+    height: 8em;
+    width: auto;
+}   
