--- a/Kettlebel/web/kettlebell.css
+++ b/Kettlebel/web/kettlebell.css
@@ -41,7 +41,8 @@ h1,h2,h3,h4,h5,h6{
     margin-top: 3em;
 }
 .navlion{
-    height: 8em;
+    margin-left: -1rem;
+    height: 4em;
     width: auto;
 }   
 body {
