--- a/Kettlebel/web/kettlebell.css
+++ b/Kettlebel/web/kettlebell.css
@@ -289,3 +289,77 @@ a {
   align-items: center;
   justify-content: space-evenly;
 }
+.cardd {
+  width: fit-content;
+  height: fit-content;
+  margin-left: 50em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 25px 25px;
+  gap: 20px;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.055);
+}
+
+/* for all social containers*/
+.socialContainer {
+  width: 52px;
+  height: 52px;
+  background-color: #aa7927;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  transition-duration: .3s;
+}
+/* instagram*/
+.containerOne:hover {
+  background: rgb(247,119,55);
+  background: linear-gradient(57deg, rgba(247,119,55,1) 0%, rgba(253,29,29,1) 50%, rgba(131,58,180,1) 100%);
+  transition-duration: .3s;
+}
+/* twitter*/
+.containerTwo:hover {
+  background: rgb(70,136,126);
+  background: linear-gradient(51deg, rgba(70,136,126,1) 0%, rgba(153,28,67,1) 32%, rgba(19,19,19,1) 86%);
+  transition-duration: .3s;
+}
+/* linkdin*/
+.containerThree:hover {
+  background-color: #7289DA;
+  transition-duration: .3s;
+}
+/* Whatsapp*/
+.containerFour:hover {
+  background-color: #FF0000;
+  transition-duration: .3s;
+}
+
+.socialContainer:active {
+  transform: scale(0.9);
+  transition-duration: .3s;
+}
+
+.socialSvg {
+  width: 17px;
+}
+
+.socialSvg path {
+  fill: rgb(255, 255, 255);
+}
+
+.socialContainer:hover .socialSvg {
+  animation: slide-in-top 0.3s both;
+}
+
+@keyframes slide-in-top {
+  0% {
+    transform: translateY(-50px);
+    opacity: 0;
+  }
+
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
